# sqlserver-cdc-to-kafka

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  newrelic.ini  pyproject.toml  requirements.txt
cdc_kafka/: __init__.py  __main__.py  avro.py  avro_from_sql.py  build_startup_state.py  change_index.py  cli.py  clock_sync.py  constants.py  find_truncation_opportunities.py  helpers.py  kafka.py  main.py  options.py  parsed_row.py  progress_reset_tool.py  progress_topic_validator.py  progress_tracking.py  replayer.py  row_comparison_validator.py  show_snapshot_history.py  sql_queries.py  sql_query_subprocess.py  tracked_tables.py  validation.py
cdc_kafka/kafka_oauth/: __init__.py  aws_msk.py
cdc_kafka/metric_reporters/: __init__.py  accumulator.py  base.py  newrelic.py  stdout.py
cdc_kafka/metric_reporting/: accumulator.py  http_post_reporter.py  kafka_reporter.py  local_file_reporter.py  metrics.py  reporter_base.py  stdout_reporter.py
cdc_kafka/serializers/: __init__.py  avro.py
replayer/: __init__.py  __main__.py  backfill_progress.py  cli.py  consumer.py  kafka_utils.py  logging_config.py  models.py  modes.py  progress.py  table_metadata.py  utils.py  worker.py
