[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlserver-cdc-to-kafka"
version = "4.3.1"
description = "Stream SQL Server Change Data Capture (CDC) events to Apache Kafka"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "avro==1.11.3",
    "aws-msk-iam-sasl-signer-python==1.0.2",
    "bitarray==2.9.2",
    "confluent-kafka==2.3.0",
    "fastavro==1.12.0",
    "Jinja2==3.1.3",
    "pyodbc==5.1.0",
    "requests==2.31.0",
    "sentry-sdk==1.45.0",
    "sortedcontainers==2.4.0",
    "tabulate==0.9.0",
]

[project.optional-dependencies]
# Used by replayer.py; requires apt install freetds-dev and python3-dev when using Docker
replayer = [
    "ctds==1.14.0",
    "faster-fifo==1.5.2",
]

dev = [
    "ipython==8.23.0",
    "line-profiler==4.1.2",
    "mypy==1.10.0",
    "sortedcontainers-stubs==2.4.2",
    "types-confluent-kafka==1.2.0",
    "types-requests==2.31.0.20240406",
    "types-tabulate==0.9.0.20240106",
    "vulture==2.11",
]

[project.scripts]
cdc-kafka = "cdc_kafka.main:run"

[tool.setuptools.packages.find]
include = ["cdc_kafka*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["cdc_kafka"]

[tool.vulture]
paths = ["cdc_kafka"]
min_confidence = 80
